--- a/Лаба3/sourses/html/shedule.html
+++ b/Лаба3/sourses/html/shedule.html
@@ -10,11 +10,11 @@
     <a href="index.html">Go back</a>
     <table>
       <tr>
-        <th>Теорія біомедичних сигналів</th>
-        <th>90</th>
-        <th>B</th>
+        <th>Предмет</th>
+        <th>Бал(цифра)</th>
+        <th>Бал(буква)</th>
       </tr>
-      <tr>
+      <tr></tr>
       <tr>
         <td>Теорія біомедичних сигналів</td>
         <td>90</td>
