--- a/Лаба4/html/task7.html
+++ b/Лаба4/html/task7.html
@@ -13,18 +13,31 @@
     <h2>CSS-Grid</h2>
     <div class="css-grid">
         <div id="first">
+            <div class="col-7 first"></div>
             <div class="col-5"></div>
-            <div class="col-3"></div>
-            <div class="col-4"></div>
         </div>
         <div id="second">
-            <div class="col-9"></div>
+            <div class="col-7 second"></div>
+            <div class="col-2"></div>
+            <div class="col-3"></div>
+            <div class="col-7 second"></div>
+            <div class="col-2"></div>
             <div class="col-3"></div>
         </div>
         <div id="third">
-            <div class="col-1"></div>
-            <div class="col-5"></div>
-            <div class="col-6"></div>
+            <div class="col-7 green"></div>
+            <div class="col-2 "></div>
+            <div class="col-3 blue"></div>
+        </div>
+        <div id="fourth">
+            <div class="col-4 "></div>
+            <div class="col-2 yellow"></div>
+            <div class="col-1 "></div>
+            <div class="col-5 sero"></div>
+            <div class="col-4 "></div>
+            <div class="col-2 yellow"></div>
+            <div class="col-1 "></div>
+            <div class="col-5 sero"></div>
         </div>
     </div>
 </body>
