--- a/Laba5/index.html
+++ b/Laba5/index.html
@@ -7,9 +7,7 @@
     <title>Laboratorna-5</title>
     <script src="task3.js"></script>
 </head>
-
 <body>
-    hello world
+    Hello World
 </body>
-
 </html>
