--- a/Лаба6/index.html
+++ b/Лаба6/index.html
@@ -13,7 +13,16 @@
     <div id="container_images"></div>
     <div id="container_big_image"></div>
     <div id="preloader"></div>
-    
+    <photo-gallery ImageList="
+    images/img1.jpg;
+    images/img2.jpg;
+    images/img3.jpg;
+    images/img4.jpg;
+    images/img5.jpg;
+    images/img6.jpg;
+    images/img7.jpg;
+    images/img8.jpg"></photo-gallery>
+
     <script src="script.js"></script>
 </body>
 
